--- a/tasks/grafana_datasource.yml
+++ b/tasks/grafana_datasource.yml
@@ -6,9 +6,9 @@
     url_username: "{{ grafana_username }}"
     url_password:  "{{ grafana_password }}"
     name: "{{ datasource.0.name }}"
-    ds_type: "{{ datasource.0.ds_type }}"
-    ds_url: "{{ datasource.0.ds_url }}"
-    tls_skip_verify: "{{ datasource.0.tls_skip_verify }}"
+    ds_type: "{{ datasource.0.ds_type | default(omit) }}"
+    ds_url: "{{ datasource.0.ds_url | default(omit) }}"
+    tls_skip_verify: "{{ datasource.0.tls_skip_verify | default(omit) }}"
   loop: "{{ grafana_datasource|subelements('datasource') }}"
   loop_control:
     loop_var: datasource
