--- a/tasks/grafana_folder.yml
+++ b/tasks/grafana_folder.yml
@@ -1,6 +1,6 @@
 ---
 - name: create folder
-  grafana_folder:
+  community.grafana.grafana_folder:
     url: "{{ grafana_url }}"
     url_username: "{{ grafana_username }}"
     url_password:  "{{ grafana_password }}"
