--- a/tasks/grafana_datasource.yml
+++ b/tasks/grafana_datasource.yml
@@ -1,15 +1,24 @@
 ---
 # datasource.0 = grafana_datasource attribute
-- name: add datasource
+- name: manage datasource
   community.grafana.grafana_datasource:
     url: "{{ grafana_url }}"
     url_username: "{{ grafana_username }}"
     url_password:  "{{ grafana_password }}"
-    name: "{{ datasource.0.name }}"
-    ds_type: "{{ datasource.0.ds_type | default(omit) }}"
-    ds_url: "{{ datasource.0.ds_url | default(omit) }}"
-    tls_skip_verify: "{{ datasource.0.tls_skip_verify | default(omit) }}"
-  loop: "{{ grafana_datasource|subelements('datasource') }}"
+    tls_skip_verify: "{{ datasources.0.tls_skip_verify | default(omit) }}"
+    org_id: "{{ datasource.org_id | default(omit) }}"
+    name: "{{ datasource }}"
+    ds_type: "{{ datasource.ds_type | default(omit) }}"
+    access: "{{ datasource.access | default(omit) }}"
+    ds_url: "{{ datasource.ds_url | default(omit) }}"
+    database: "{{ datasource.database | default(omit) }}"
+    with_credentials: "{{ datasource.with_credentials | default(omit) }}"
+    is_default: "{{ datasource.is_default | default(omit) }}"
+    user: "{{ datasource.user | default(omit) }}"
+    password: "{{ datasource.password | default(omit) }}"
+    additional_json_data: "{{ datasource.additional_json_data | default(omit) }}"
+    additional_secure_json_data: "{{ datasource.additional_secure_json_data | default(omit) }}"
+  loop: "{{ grafana_datasource }}"
   loop_control:
     loop_var: datasource
   tags: datasource
