--- a/tasks/grafana_folder.yml
+++ b/tasks/grafana_folder.yml
@@ -1,11 +1,13 @@
 ---
-- name: create folder
+- name: manage folder
   community.grafana.grafana_folder:
     url: "{{ grafana_url }}"
     url_username: "{{ grafana_username }}"
     url_password:  "{{ grafana_password }}"
-    title: "{{ folder }}"
-  loop: "{{ grafana_folder }}"
+    name: "{{ folder.1 }}"
+    state: "{{ folder.0.state | default(omit) }}"
+    skip_version_check: "{{ folder.0.skip_version_check | default(omit) }}"
+  loop: "{{ grafana_folder|subelements('folder_object') }}"
   loop_control:
     loop_var: folder
   tags: folder
