--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+- name: grafana user configuration
+  include_tasks: grafana_user.yml
+  when: grafana_user is defined
+  tags: user
+
+- name: grafana team configuration
+  include_tasks: grafana_team.yml
+  when: grafana_team is defined
+  tags: team
+
 - name: grafana datasource configuration
   include_tasks: grafana_datasource.yml
   when: grafana_datasource is defined
@@ -8,3 +18,8 @@
   include_tasks: grafana_folder.yml
   when: grafana_folder is defined
   tags: folder
+
+- name: grafana dashboard configuration
+  include_tasks: grafana_dashboard.yml
+  when: grafana_dashboard is defined
+  tags: dashboard
