fix: variable names

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-grafana_user: []
-grafana_team: []
-grafana_datasource: []
-grafana_folder: []
-grafana_dashboard: []
+grafana_users: []
+grafana_teams: []
+grafana_datasources: []
+grafana_folders: []
+grafana_dashboards: []
