--- a/tasks/grafana_folder.yml
+++ b/tasks/grafana_folder.yml
@@ -7,7 +7,7 @@
     name: "{{ folder.1 }}"
     state: "{{ folder.0.state | default(omit) }}"
     skip_version_check: "{{ folder.0.skip_version_check | default(omit) }}"
-  loop: "{{ grafana_folder|subelements('folder_object') }}"
+  loop: "{{ grafana_folders|subelements('folder_object') }}"
   loop_control:
     loop_var: folder
   tags: folder
