--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   generate_changelog:
@@ -43,7 +43,7 @@ jobs:
         uses: github-actions-x/commit@v2.6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          push-branch: 'master'
+          push-branch: 'main'
           commit-message: 'update changelog'
           force-add: 'true'
           files: CHANGELOG.md
@@ -54,7 +54,7 @@ jobs:
       # changelog gets updated but action works on old commit id
       - uses: actions/checkout@v2.3.4
         with:
-          ref: master
+          ref: main
 
       - name: Generate changelog for the release
         run: |
