trigger galaxy action on releases

--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -2,9 +2,9 @@
 name: Publish to Ansible Galaxy
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types:
+      - published
 
 jobs:
   release:
