--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,13 @@
 ---
 galaxy_info:
   role_name: grafana
-  author: t_systems_mms
+  author: telekom_mms
   description: Configure Grafana dashboards, folders, datasources, teams and users
   license: GPLv3
   min_ansible_version: 2.9
   galaxy_tags:
-  - grafana
-  - monitoring
+    - grafana
+    - monitoring
   platforms:
     - name: EL
       versions:
