--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,12 +5,12 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: "rndmh3ro/docker-centos7-ansible:latest"
+    image: rndmh3ro/docker-debian11-ansible:latest
     command: ${MOLECULE_DOCKER_COMMAND:-/lib/systemd/systemd}
     env:
-      http_proxy: "${http_proxy}"
-      https_proxy: "${https_proxy}"
-      no_proxy: "${no_proxy}"
+      http_proxy: ${http_proxy}
+      https_proxy: ${https_proxy}
+      no_proxy: ${no_proxy}
       container: docker
     pre_build_image: true
 provisioner:
