--- a/tasks/silence.yml
+++ b/tasks/silence.yml
@@ -11,7 +11,7 @@
     validate_certs: "{{ grafana_validate_certs | default(omit) }}"
     url_username: "{{ grafana_username }}"
     url_password: "{{ grafana_password }}"
-    force_basic_auth: "{{ grafana_force_basic_auth | default(omit) }}"
+    force_basic_auth: "{{ grafana_force_basic_auth | default(true) }}"
     client_cert: "{{ grafana_client_cert | default(omit) }}"
     client_key: "{{ grafana_client_key | default(omit) }}"
     method: POST
