--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,14 @@
 ---
-# datasource.0 = grafana_datasource attribute
-- name: Manage datasource
-  community.grafana.grafana_datasource:
+- name: Grafana connection anchor
+  ansible.builtin.set_fact: &grafana_connection
     url: "{{ grafana_url }}"
     url_username: "{{ grafana_username }}"
     url_password: "{{ grafana_password }}"
+
+# datasource.0 = grafana_datasource attribute
+- name: Manage datasource
+  community.grafana.grafana_datasource:
+    <<: *grafana_connection
     tls_skip_verify: "{{ datasource.0.tls_skip_verify | default(omit) }}"
     org_id: "{{ datasource.0.org_id | default(omit) }}"
     name: "{{ datasource.0.name }}"
@@ -25,9 +29,7 @@
 
 - name: Manage folder
   community.grafana.grafana_folder:
-    url: "{{ grafana_url }}"
-    url_username: "{{ grafana_username }}"
-    url_password: "{{ grafana_password }}"
+    <<: *grafana_connection
     name: "{{ folder.1 }}"
     state: "{{ folder.0.state | default(omit) }}"
     skip_version_check: "{{ folder.0.skip_version_check | default(omit) }}"
@@ -38,9 +40,7 @@
 
 - name: Manage team
   community.grafana.grafana_team:
-    url: "{{ grafana_url }}"
-    url_username: "{{ grafana_username }}"
-    url_password: "{{ grafana_password }}"
+    <<: *grafana_connection
     name: "{{ team.1 }}"
     email: "{{ team.0.email }}"
     members: "{{ team.0.members | default(omit) }}"
@@ -54,9 +54,7 @@
 
 - name: Manage user
   community.grafana.grafana_user:
-    url: "{{ grafana_url }}"
-    url_username: "{{ grafana_username }}"
-    url_password: "{{ grafana_password }}"
+    <<: *grafana_connection
     name: "{{ user }}"
     email: "{{ user.email | default(omit) }}"
     login: "{{ user.login }}"
@@ -70,9 +68,7 @@
 
 - name: Manage dashboard
   community.grafana.grafana_dashboard:
-    grafana_url: "{{ grafana_url }}"
-    grafana_user: "{{ grafana_username }}"
-    grafana_password: "{{ grafana_password }}"
+    <<: *grafana_connection
     org_id: "{{ dashboard.0.org_id | default(omit) }}"
     folder: "{{ dashboard.0.folder | default(omit) }}"
     state: "{{ dashboard.0.state | default(omit) }}"
@@ -87,4 +83,3 @@
   loop_control:
     loop_var: dashboard
   tags: dashboard
-
