--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,22 +5,10 @@ galaxy_info:
   description: Configure Grafana dashboards, folders, datasources, teams and users
   license: GPLv3
   min_ansible_version: 2.9
-  galaxy_tags:
-    - grafana
-    - monitoring
+  galaxy_tags: [grafana, monitoring]
   platforms:
-    - name: EL
-      versions:
-        - all
-    - name: Fedora
-      versions:
-        - all
-    - name: Amazon
-      versions:
-        - all
-    - name: Debian
-      versions:
-        - all
-    - name: Ubuntu
-      versions:
-        - all
+    - {name: EL, versions: [all]}
+    - {name: Fedora, versions: [all]}
+    - {name: Amazon, versions: [all]}
+    - {name: Debian, versions: [all]}
+    - {name: Ubuntu, versions: [all]}
