--- a/tasks/organization_users.yml
+++ b/tasks/organization_users.yml
@@ -11,16 +11,15 @@
     org_id: "{{ organization_user.org_id | default(omit) }}"
   loop: "{{ grafana_organization_users | selectattr('org_name', 'undefined') | list }}"
   loop_control: {loop_var: organization_user}
-  tags: organization_user
 
 - name: Grafana organization API tasks
-  tags: organization_user
   module_defaults:
     ansible.builtin.uri:
       url_username: "{{ grafana_username }}"
       url_password: "{{ grafana_password }}"
       force_basic_auth: true
       return_content: true
+  when: "{{ grafana_organization_users | selectattr('org_name', 'defined') | list > 0 }}"
   block:
     - name: Get organizations
       ansible.builtin.uri:
@@ -31,7 +30,7 @@
 
     - name: Get users
       ansible.builtin.uri:
-        url: "{{ grafana_url }}/api/users/lookup?loginOrEmail={{ user.login | default(user.email) | urlencode }}"
+        url: "{{ grafana_url }}/api/users/lookup?loginOrEmail={{ user.login | urlencode }}"
       loop: "{{ grafana_organization_users | selectattr('state', 'eq', 'absent') | list }}"
       loop_control: {loop_var: user}
       when: "{{ grafana_organization_users | selectattr('state', 'defined') }}"
@@ -39,15 +38,16 @@
 
     - name: Manage organization user
       ansible.builtin.uri:
-        url: "{{ grafana_url }}/api/orgs/{{ _org_id }}/users{{ '/' ~ _user_id if organization_user.state | default('') == 'absent' else '' }}"
+        url: "{{ grafana_url }}/api/orgs/{{ _org_id }}/users{{ '/' ~ _user_id if _organization_user_state == 'absent' else '' }}"
         body:
-          loginOrEmail: "{{ organization_user.login | default(organization_user.email) }}"
+          loginOrEmail: "{{ organization_user.login }}"
           role: "{{ organization_user.role | default(omit) }}"
         body_format: json
-        method: "{{ 'DELETE' if organization_user.state | default('') == 'absent' else 'POST' }}"
+        method: "{{ 'DELETE' if _organization_user_state == 'absent' else 'POST' }}"
       loop: "{{ grafana_organization_users | selectattr('org_name', 'defined') }}"
       loop_control: {loop_var: organization_user}
       vars:
+        _organization_user_state: "{{ organization_user.state | default('') }}"
         _org_id: "{{ _grafana_organizations.results |
                      map(attribute='json') |
                      selectattr('name', 'eq', organization_user.org_name) |
