--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -69,8 +69,9 @@
   tags: user
 
 - name: Organization users
-  ansible.builtin.include_tasks: organization_users.yml
-  apply: {tags: organization_user}
+  ansible.builtin.include_tasks:
+    file: organization_users.yml
+    apply: {tags: organization_user}
   tags: always
 
 - name: Manage dashboard
