--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   author: telekom_mms
   description: Configure Grafana dashboards, folders, datasources, teams and users
   license: GPLv3
-  min_ansible_version: 2.9
+  min_ansible_version: "2.9"
   galaxy_tags: [grafana, monitoring]
   platforms:
     - {name: EL, versions: [all]}
