--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -75,11 +75,18 @@
   loop_control: {loop_var: user}
   tags: user
 
-- name: Organization users
-  ansible.builtin.include_tasks:
-    file: organization_users.yml
-    apply: {tags: organization_user}
-  when: grafana_organization_users | length > 0
+- name: Manage organization users
+  community.grafana.grafana_organization_user:
+    url: "{{ grafana_url }}"
+    url_username: "{{ grafana_username }}"
+    url_password: "{{ grafana_password }}"
+    login: "{{ organization_user.login }}"
+    role: "{{ organization_user.role | default(omit) }}"
+    state: "{{ organization_user.state | default(omit) }}"
+    org_id: "{{ organization_user.org_id | default(omit) }}"
+    org_name: "{{ organization_user.org_name | default(omit) }}"
+  loop: "{{ grafana_organization_users }}"
+  loop_control: {loop_var: organization_user}
   tags: organization_user
 
 - name: Manage dashboard
