--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,3 +9,5 @@ on:
 jobs:
   release:
     uses: telekom-mms/.github/.github/workflows/release.yml@main
+    secrets:
+      GH_BRANCH_PROTECTION_APP_TOKEN: ${{ secrets.GH_BRANCH_PROTECTION_APP_TOKEN }}
