--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,14 +5,14 @@
     http_proxy: "{{ lookup('env', 'HTTP_PROXY') | default(omit)  }}"
     https_proxy: "{{ lookup('env', 'HTTPS_PROXY') | default(omit) }}"
     no_proxy: "{{ lookup('env', 'NO_PROXY') | default(omit) }}"
-  tasks:
-    - name: Include ansible-role-grafana
-      ansible.builtin.include_role:
-        name: ansible-role-grafana
+
   vars:
     grafana_url: http://localhost:3000
     grafana_username: admin
     grafana_password: admin
+
+    grafana_organizations:
+      - name: my_orga
 
     grafana_datasources:
       - name: Loki
@@ -24,6 +24,20 @@
       - name: my_service
       - name: other_service
 
+    grafana_teams:
+      - name: my_team
+        email: myteam@example.de
+
+    grafana_users:
+      - name: Test User
+        login: testuser
+        password: supersecure!123
+        email: testuser@example.de
+
     grafana_dashboards:
       - folder: my_service
         path: test_dashboard.json
+        overwrite: true
+
+  roles:
+    - name: ansible-role-grafana
