test(molecule): org users

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -24,6 +24,12 @@
       - name: my_service
       - name: other_service
 
+    grafana_organization_users:
+      - login: testuser
+        org_id: 1
+      - login: testuser
+        org_name: my_org
+
     grafana_dashboards:
       - folder: my_service
         path: test_dashboard.json
