--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -81,6 +81,7 @@
     url_username: "{{ grafana_username }}"
     url_password: "{{ grafana_password }}"
     org_id: "{{ dashboard.org_id | default(omit) }}"
+    org_name: "{{ dashboard.org_name | default(omit) }}"
     folder: "{{ dashboard.folder | default(omit) }}"
     state: "{{ dashboard.state | default(omit) }}"
     slug: "{{ dashboard.slug | default(omit) }}"
