--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,6 @@
   loop_control: {loop_var: organization}
   tags: organization
 
-# datasource.0 = grafana_datasource attribute
 - name: Manage datasource
   community.grafana.grafana_datasource:
     url: "{{ grafana_url }}"
@@ -18,6 +17,7 @@
     url_password: "{{ grafana_password }}"
     tls_skip_verify: "{{ datasource.tls_skip_verify | default(omit) }}"
     org_id: "{{ datasource.org_id | default(omit) }}"
+    org_name: "{{ datasource.org_name | default(omit) }}"
     name: "{{ datasource.name }}"
     ds_type: "{{ datasource.ds_type | default(omit) }}"
     access: "{{ datasource.access | default(omit) }}"
